updated libs build script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,17 @@ cmake_minimum_required(VERSION 3.16)
 project(UUID7 C)
 
 option(UUID7_BUILD_TESTS "Build UUID7 unit tests" ON)
+option(UUID7_BUILD_STATIC "Build the static libuuid7.a archive" ON)
+option(UUID7_BUILD_SHARED "Build the shared libuuid7.so library" OFF)
 option(UUID7_ENABLE_COVERAGE "Enable code coverage instrumentation" OFF)
 
 set(UUID7_HEADERS include/uuid7.h)
 set(UUID7_SOURCES src/uuid7.c)
 set(UUID7_PUBLIC_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+if(NOT UUID7_BUILD_STATIC AND NOT UUID7_BUILD_SHARED)
+    message(FATAL_ERROR "Enable at least one of UUID7_BUILD_STATIC or UUID7_BUILD_SHARED.")
+endif()
 
 add_library(uuid7_obj OBJECT ${UUID7_SOURCES})
 target_include_directories(
@@ -21,13 +27,19 @@ set_target_properties(uuid7_obj PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 define_property(TARGET PROPERTY UUID7_EXPORT_NAME BRIEF_DOCS "" FULL_DOCS "")
 
-add_library(uuid7_static STATIC $<TARGET_OBJECTS:uuid7_obj>)
-add_library(uuid7_shared SHARED $<TARGET_OBJECTS:uuid7_obj>)
+set(UUID7_TARGETS "")
+if(UUID7_BUILD_STATIC)
+    add_library(uuid7_static STATIC $<TARGET_OBJECTS:uuid7_obj>)
+    set_target_properties(uuid7_static PROPERTIES OUTPUT_NAME uuid7)
+    list(APPEND UUID7_TARGETS uuid7_static)
+endif()
+if(UUID7_BUILD_SHARED)
+    add_library(uuid7_shared SHARED $<TARGET_OBJECTS:uuid7_obj>)
+    set_target_properties(uuid7_shared PROPERTIES OUTPUT_NAME uuid7)
+    list(APPEND UUID7_TARGETS uuid7_shared)
+endif()
 
-set_target_properties(uuid7_static PROPERTIES OUTPUT_NAME uuid7)
-set_target_properties(uuid7_shared PROPERTIES OUTPUT_NAME uuid7)
-
-foreach(lib uuid7_static uuid7_shared)
+foreach(lib ${UUID7_TARGETS})
     target_include_directories(
         ${lib}
         PUBLIC
@@ -45,31 +57,48 @@ endif()
 if(UUID7_ENABLE_COVERAGE)
     if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
         target_compile_options(uuid7_obj PRIVATE --coverage -O0 -g)
-        target_link_options(uuid7_shared PRIVATE --coverage)
+        if(UUID7_BUILD_SHARED)
+            target_link_options(uuid7_shared PRIVATE --coverage)
+        endif()
         set(UUID7_TEST_COVERAGE_OPTIONS --coverage)
     else()
         message(WARNING "Coverage is only supported with GCC or Clang; ignoring UUID7_ENABLE_COVERAGE")
     endif()
 endif()
 
-add_library(uuid7::static ALIAS uuid7_static)
-add_library(uuid7::shared ALIAS uuid7_shared)
+if(UUID7_BUILD_STATIC)
+    add_library(uuid7::static ALIAS uuid7_static)
+endif()
+if(UUID7_BUILD_SHARED)
+    add_library(uuid7::shared ALIAS uuid7_shared)
+endif()
 
 include(GNUInstallDirs)
 
-install(TARGETS uuid7_static uuid7_shared
+if(UUID7_TARGETS)
+    install(
+        TARGETS ${UUID7_TARGETS}
         EXPORT UUID7Targets
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    )
+endif()
 
 install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-install(EXPORT UUID7Targets
+if(UUID7_TARGETS)
+    install(
+        EXPORT UUID7Targets
         NAMESPACE uuid7::
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/uuid7)
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/uuid7
+    )
+endif()
 
 if(UUID7_BUILD_TESTS)
+    if(NOT UUID7_BUILD_STATIC)
+        message(FATAL_ERROR "UUID7 tests require UUID7_BUILD_STATIC=ON")
+    endif()
     enable_testing()
     find_package(PkgConfig REQUIRED)
     pkg_check_modules(CMOCKA REQUIRED IMPORTED_TARGET cmocka)
